--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ layoutdir: "layouts"
 publishdir: "public"
 indexes:
   category: "categories"
-baseurl: "http://spencerlyon2.github.io/hugo_gh_blog"
+baseurl: "http://thisismk.github.io/scaling-octopus"
 title: "Hugo Blog Template for GitHub Pages"
+canonifyurls: true
 ...
